# 002-mcp-manager

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION-ORDER.md  IMPROVEMENT-PLAN-STATUS.md  LICENSE  MCP-VERIFICATION-REPORT.md  Makefile  OFFICE_SETUP.md  OUTSTANDING-ISSUES.md  PHASE2-COMPLETE.md  PHASE2-ERROR-HANDLING-COMPLETE.md  README.md  RENAMING-PLAN.md  SECURITY-FIX-SUMMARY.md  SESSION-SUMMARY.md  SETUP-COMPLETE-NEXT-STEPS.md  SPEC-KIT-SAFETY.md  T031-COMPLETED.md  T037-T039-COMPLETED.md  astro.config.mjs  hf_quick_setup.sh  mcp-github-repo.md  mcp-global-manager.py  package-lock.json  package.json  pyproject.toml  repo-setup-script.sh  setup_hf_with_cli.py  tailwind.config.mjs  test_bug.sh  test_claude_fix.sh  uv.toml  verify_mcp_servers.py
.astro/: content.d.ts
.github/: WORKFLOW-DEBUGGING.md  deployment-state.json
.github/scripts/: validate-workflow.sh
.github/workflows/: ci.yml  deploy.yml  gemini-dispatch.yml
.husky/: pre-commit
.specify/features/20251025-171852-spec-global-mcp-multi-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/templates/: plan-template.md  tasks-template.md
backend/src/mcp_manager/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  hf_integration.py  main_cli.py  mcp_installer.py  python_env.py  utils.py  uv_config.py  version_utils.py
docs/: FOLLOWING-INSTRUCTIONS.md  HF-MCP-SERVER-SETUP.md  OFFICE-DEPLOYMENT.md  PYTHON-TROUBLESHOOTING.md  SECURITY.md  SECURITY_CHECKLIST.md  SYSTEM-WIDE-MCP-SETUP.md  TROUBLESHOOTING.md  WORKFLOW-FAILURE-ANALYSIS.md  api.md  complete-mcp-guide.md  configuration.md  context7-mcp-setup.md  github-mcp-setup.md  index.html  migration-guide.md  servers.md  troubleshooting.md
docs/_astro/: index.BJVeRybr.css  index.BNjL2U-X.css  index.BNpuQnju.css  index.BjHt10u3.css  index.BupWeLWW.css  index.CIjtlzRO.css  index.DkxCvWho.css  index.cF-oA2o3.css
docs/office-setup/: index.html
frontend/.astro/: content.d.ts
frontend/src/components/: Documentation.astro  Features.astro  Footer.astro  Hero.astro  ThemeToggle.astro
frontend/src/pages/: index.astro
local-infra/runners/: gh-pages-setup.sh  gh-workflow-local.sh  mcp-performance-monitor.sh
project-status/: CLI-MODULARIZATION-COMPLETE.md  IMPROVEMENT-PLAN-VERIFICATION-COMPLETE.md  T029-T032-COMPLETED.md  T034-COMPLETED.md  T035-COMPLETED.md  T036-COMPLETED.md  T040-COMPLETED.md  T041-COMPLETED.md  improvement_plan.md
scripts/: README.md  deploy.sh  run_all_audits.sh
scripts/audit/: check_mcp_configs.py  check_outdated.sh  check_pip_usage.sh  find_root_files.sh
scripts/deployment/: local-ci.sh
scripts/git/: check-branch-name.sh  push-workflow.sh
scripts/local-ci/: README.md  run.sh
scripts/local-ci/lib/: cleanup-logs.sh  logger.sh  logger.test.sh  validator.sh
scripts/mcp/: README.md  mcp-profile
scripts/security/: migrate-gemini-to-env-vars.py  migrate-to-env-vars.py
scripts/setup/: configure-system-wide-mcp.sh  hf_quick_setup.sh  setup_hf_mcp.py
scripts/tui/: README.md  run.sh
specs-backup-20251015/001-system-python-enforcement/: data-model.md  plan.md  quickstart.md  tasks.md
specs-backup-20251015/002-referencing-to-this/: data-model.md  plan.md
specs-backup-20251015/004-multi-cli-support/: data-model.md  plan.md  research-project-health.md
specs/001-fix-documentation-inconsistencies/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-local-cicd-astro-site/: CRITICAL_ISSUES.md  data-model.md  plan.md  pre-commit-secrets-research.md  quickstart.md  research-json-logging.md  research.md  spec.md  tasks.md
specs/001-local-cicd-astro-site/checklists/: requirements.md  (+2 more)
specs/001-project-restructure/: spec.md  tasks.md
specs/002-cicd-pipeline-enhancements/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-referencing-to-this/: research.md  spec.md  tasks.md
specs/002-system-python-enforcement/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-improvements/: quickstart.md
specs/003-multi-tool-support/: spec.md
specs/003-system-python-enforcement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-multi-cli-support/: constitution.md  quickstart.md  research.md  tasks.md
specs/20251026-000000-feat-multi-tool-clarification/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/999-archived-duplicate/: README-ARCHIVED.md
src/components/: Documentation.astro  Features.astro  Hero.astro  MCPServers.astro
src/layouts/: Layout.astro
src/mcp_manager/: __main__.py  claude_agents.py  cli.py  cli_utils.py  core.py  exceptions.py  fleet_manager.py  gemini_integration.py  main_cli.py  mcp_installer.py  models.py  office_deployment.py  project_standards.py
src/pages/: index.astro  office-setup.astro
tests/contract/: test_audit_with_paths_contract.py  test_gemini_sync_contract.py  test_update_server_contract.py  test_validation_cli.py  test_validation_cli_constitution.py  test_validation_cli_mcp.py  test_validation_cli_python.py  test_validation_cli_uv.py
tests/integration/: test_configurable_audit.py  test_gemini_sync_workflow.py  test_mcp_server_python.py  test_mcp_update_workflow.py  test_python_detection.py  test_uv_integration.py
tests/unit/: test_python_env.py  test_python_env_fixed.py  test_uv_config.py  test_validators.py
web/: README.md  astro.config.mjs  package-lock.json  package.json
(+46 files in other folders)
